--- a/assets/assets/css/style.css
+++ b/assets/assets/css/style.css
@@ -1,19 +1,21 @@
 
+/*Universal Selector*/
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box; /*another content-box*/
 }
 body {
   font-family:Arial, Helvetica, sans-serif ;
-  color: hwb(120 52% 27%);}
-
+  color: #70bd93;}
+  /* Nav start */
   header {
-    background-color: #777;
+    background-color: #70bd93;
     padding: 20px 35px;
     
   }
   header h1 {
-    color: rgb(199, 68, 195);
+    color: yellow;
     font-weight: bold;
     font-size: 36px;
     margin:0 ;
@@ -21,6 +23,10 @@ body {
 
   header a {
     color: yellow;
+  }
+  header nav {
+    float: right;
+    margin: 0;
   }
 
   header nav ul li {
@@ -34,3 +40,29 @@ body {
     px;
 
   }
+  /* Nav end */
+  /* Footer start*/
+  footer {
+    background: yellow
+    width: 100% ;
+    padding: 40px 35px;
+  }
+
+  footer h2 {
+    display: inline;
+    color: rgb(24, 80, 129);
+    font-size: 30px;
+    margin: 0;
+  }
+  footer div {
+    float: right;
+    line-height: 1.5;
+    text-align: right;
+  }
+
+  footer a {
+    color: rgb(24, 80, 129);
+  }
+  /* Footer end*/
+  /* Hereo Section start*/
+  sec
